# collection-server

./: .dockerignore  .envrc  .travis.yml  CONTRIBUTING.md  ChangeLog.md  Dockerfile  Dockerfile.compose  Dockerfile.scratch  README.md  cloudbuild.yaml  collection-json.nix  collection-server.cabal  collection-server.nix  default.nix  docker-compose.yml  shell.nix
nix/: collection-json.nix  network-uri-json.nix
resources/items/: item.yaml
src/: API.hs  Environment.hs  Errors.hs  Main.hs  Types.hs
src-external/Network/URI/: Missing.hs
src-external/Servant/API/ContentTypes/: CollectionJSON.hs
src/Internal/Data/: CollectionJSON.hs
src/Internal/System/: FilePath.hs
test/: TypesSpec.hs
test/Internal/System/: FilePathSpec.hs
