name:                collection-server
version:             0.1.0.0
synopsis:            Static Resource Server for application/vnd.collection+json

description:         
  Static resource server that serves application/vnd.collection+json resources
  from a directory of yaml files.

homepage:            https://github.com/alunduil/collection-server
bug-reports:         https://github.com/alunduil/collection-server/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.*

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , README.md
  , Setup.hs

source-repository head
  type:     git
  location: https://github.com/alunduil/collection-server.git

executable collection-server
  default-language:    Haskell2010
  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind -fprint-potential-instances

  hs-source-dirs:
      src
    , src-external

  other-modules:       
      API
    , Environment
    , Errors
    , Types

    , Network.URI.Missing
    , Servant.API.ContentTypes.CollectionJSON

  build-depends:
      aeson           == 1.1.*
    , base            == 4.9.*
    , collection-json == 1.0.*
    , directory       == 1.3.*
    , envy            == 1.3.*
    , extra           == 1.5.*
    , filepath        == 1.4.*
    , http-api-data   == 0.3.*
    , http-media      == 0.6.*
    , http-types      == 0.9.*
    , MissingH        == 1.4.*
    , network-uri     == 2.6.*
    , servant         == 0.11.*
    , servant-server  == 0.11.*
    , text            == 1.2.*
    , wai-logger      == 2.3.*
    , warp            == 3.2.*
    , yaml            == 0.8.*

  other-extensions:
      DataKinds
    , DeriveGeneric
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators
