name:                collection-server
version:             0.1.0.0
synopsis:            Static Resource Server for application/vnd.collection+json

description:         
  Static resource server that serves application/vnd.collection+json resources
  from a directory of yaml files.

homepage:            https://github.com/alunduil/collection-server
bug-reports:         https://github.com/alunduil/collection-server/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.*

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , README.md
  , Setup.hs

source-repository head
  type:     git
  location: https://github.com/alunduil/collection-server.git

executable collection-server
  default-language:    Haskell2010
  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  hs-source-dirs:
      src

  other-modules:       
      API
    , Environment
    , Errors
    , External.Network.URI.HttpApiData
    , External.Servant.API.ContentTypes.CollectionJSON
    , Internal.Data.CollectionJSON
    , Internal.System.FilePath
    , Types

  build-depends:
      aeson           == 1.1.*
    , base            == 4.9.*
    , collection-json == 1.1.*
    , directory       == 1.3.*
    , envy            == 1.3.*
    , exceptions      == 0.8.*
    , extra           == 1.5.*
    , filepath        == 1.4.*
    , http-api-data   == 0.3.*
    , http-media      == 0.6.*
    , http-types      == 0.9.*
    , network-uri     == 2.6.*
    , servant         == 0.11.*
    , servant-server  == 0.11.*
    , text            == 1.2.*
    , wai-logger      == 2.3.*
    , warp            == 3.2.*
    , yaml            == 0.8.*

  other-extensions:
      DataKinds
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators

test-suite collection-server-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  hs-source-dirs:
      src
    , test

  other-modules:
      External.Data.CollectionJSON.Arbitrary
    , External.Network.URI.Arbitrary
    , External.Network.URI.ArbitrarySpec
    , External.Network.URI.HttpApiData
    , External.Network.URI.HttpApiDataSpec
    , External.Servant.API.ContentTypes.CollectionJSON
    , External.Servant.API.ContentTypes.CollectionJSONSpec
    , Internal.Data.CollectionJSON
    , Internal.System.FilePath
    , Internal.System.FilePathSpec
    , Types
    , TypesSpec

  build-tool-depends:
      hspec-discover:hspec-discover == 2.4.*

  build-depends:
      aeson                == 1.1.*
    , base                 == 4.9.*
    , collection-json      == 1.1.*
    , directory            == 1.3.*
    , exceptions           == 0.8.*
    , extra                == 1.5.*
    , filepath             == 1.4.*
    , hspec                == 2.4.*
    , http-api-data        == 0.3.*
    , http-media           == 0.6.*
    , network-uri          == 2.6.*
    , QuickCheck           == 2.9.*
    , quickcheck-instances == 0.3.*
    , servant              == 0.11.*
    , servant-server       == 0.11.*
    , test-invariant       == 0.4.*
    , text                 == 1.2.*
    , yaml                 == 0.8.*

  other-extensions:
      DataKinds
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators
