name:                collection-server
version:             1.0.1.0
synopsis:            Static Resource Server for application/vnd.collection+json

description:         
  Static resource server that serves application/vnd.collection+json resources
  from a directory of yaml files.

homepage:            https://github.com/alunduil/collection-server
bug-reports:         https://github.com/alunduil/collection-server/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 8.*

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , README.md
  , resources/empty/.keep
  , resources/invalid/item.yaml
  , resources/invalid/.keep
  , resources/items/item.yaml
  , resources/items/.keep
  , resources/.keep
  , resources/mixed/item.yaml
  , resources/mixed/.keep
  , resources/mixed/subcollection/.keep
  , Setup.hs

source-repository head
  type:     git
  location: https://github.com/alunduil/collection-server.git

executable collection-server
  default-language:    Haskell2010
  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  hs-source-dirs:
      src

  other-modules:       
      API
    , Environment
    , Errors
    , External.Network.URI.HttpApiData
    , External.Servant.API.ContentTypes.CollectionJSON
    , Internal.Data.CollectionJSON
    , Internal.System.FilePath
    , Types

  build-depends:
      aeson           >= 1.1 && < 1.5
    , base            >= 4.9 && < 4.13
    , collection-json >= 1.1 && < 1.3
    , directory       == 1.3.*
    , envy            >= 1.3 && < 1.6
    , exceptions      >= 0.8 && < 0.11
    , extra           >= 1.5 && < 1.7
    , filepath        == 1.4.*
    , http-api-data   >= 0.3 && < 0.5
    , http-media      >= 0.6 && < 0.8
    , http-types      >= 0.9 && < 0.13
    , network-uri     == 2.6.*
    , servant         >= 0.11 && < 0.16
    , servant-server  == 0.11.*
    , text            == 1.2.*
    , wai-cors        == 0.2.*
    , wai-extra       == 3.0.*
    , warp            == 3.2.*
    , yaml            >= 0.8 && < 0.12

  other-extensions:
      DataKinds
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators

test-suite collection-server-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  hs-source-dirs:
      src
    , test

  other-modules:
      External.Data.CollectionJSON.Arbitrary
    , External.Network.URI.HttpApiData
    , External.Network.URI.HttpApiDataSpec
    , External.Servant.API.ContentTypes.CollectionJSON
    , External.Servant.API.ContentTypes.CollectionJSONSpec
    , Internal.Data.CollectionJSON
    , Internal.System.FilePath
    , Internal.System.FilePathSpec
    , Types
    , TypesSpec

  build-tool-depends:
      hspec-discover:hspec-discover >= 2.4 && < 2.6

  build-depends:
      aeson                >= 1.1 && < 1.5
    , base                 >= 4.9 && < 4.13
    , collection-json      >= 1.1 && < 1.3
    , directory            == 1.3.*
    , exceptions           >= 0.8 && < 0.11
    , extra                >= 1.5 && < 1.7
    , filepath             == 1.4.*
    , hspec                >= 2.4 && < 2.7
    , http-api-data        >= 0.3 && < 0.5
    , http-media           >= 0.6 && < 0.8
    , network-arbitrary    >= 0.3 && < 0.5
    , network-uri          == 2.6.*
    , QuickCheck           >= 2.9 && < 2.13
    , quickcheck-instances == 0.3.*
    , servant              >= 0.11 && < 0.16
    , servant-server       == 0.11.*
    , test-invariant       == 0.4.*
    , text                 == 1.2.*
    , yaml                 >= 0.8 && < 0.12

  other-extensions:
      DataKinds
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators
